--- a/index.html
+++ b/index.html
@@ -80,6 +80,121 @@
             </div>
             </div>
         </section>
+        <section class="view4">
+          <div class="consultant">
+            <div class="top">
+              <img src="./img6.png" alt="">
+            </div>
+            <div class="bottom">
+                <h4>Consultant</h4>
+                <h1>Find a Flutter consultant</h1>
+                <p>Find trusted Flutter partners. We vet the partners listed in the directory to verify their record of successful Flutter projects, a sufficient number of skilled developers on staff, and their commitment to growing the Flutter community.</p>
+                <div class="culture">
+                <button>
+                    Find Consultants
+                </button>
+                </div>
+        </section>
+        <section class="view5">
+           <div class="invited">
+            <div class="top">
+              <img src="./img7.png" alt="">
+            </div>
+            <div class="bottom">
+                <h4>Events</h4>
+                <h1>Everyone is invited</h1>
+                <p>View upcoming events and see all of the latest talks and announcements from previous events.</p>
+                <div class="culture">
+                <button>
+                    see events
+                </button>
+        </section>
+         <section class="view6">
+          <div class="pub">
+            <div class="top">
+              <img src="./img8.png" alt="">
+            </div>
+            <div class="bottom">
+                <h4>Packages & Integrations</h4>
+                <h1>Find what you need on pub.dev</h1>
+                <p>Browse over 20,000 packages, plugins, and integrations for custom UI components, authentication solutions, state management libraries, and more.</p>
+                <div class="culture">
+                <button>
+                    Explore packages
+                </button>
+                </div>
+        </section>
+        <section class="view7">
+            <div class="started">
+              <div class="get">
+                <h1>Get started</h1>
+                <p>Instant access to the power of the Flutter framework</p>
+              </div>
+                <div class="culture">
+                <button>
+                   Install
+                </button>
+                <p>Reafd the docs<i class="ri-arrow-right-long-line"></i></p>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer-light">
+       <div class="contentfooter">
+         <div class="logo">
+          <a href="href">
+            <img src="./logo.svg" alt="">
+          </a>
+         </div>
+         <div class="footerlinks">
+          <ul>
+            <li>About Flutter</li>
+            <li><a href="href">Careers</a></li>
+            <li><a href="href">News</a></li>
+            <li><a href="href">Brand</a></li>
+            <li><a href="href">Cultures</a></li>
+          </ul>
+          <ul>
+            <li>Learn Flutter</li>
+            <li><a href="href">Learning Jouney</a></li>
+            <li><a href="href">Codelabs</a></li>
+            <li><a href="href">Samples</a></li>
+            <li><a href="href">Cookbook</a></li>
+          </ul>
+          <ul>
+            <li>Multi-Platform</li>
+            <li><a href="href">Mobile</a></li>
+            <li><a href="href">Web</a></li>
+            <li><a href="href">Desktop</a></li>
+            <li><a href="href">Embedded</a></li>
+            <li><a href="href">iOS</a></li>
+          </ul>
+         </div>
+       </div>
+       <social class="socialfooter">
+        <div class="icon">
+          <a href="href"><i class="ri-youtube-fill"></i></a>
+          <a href="href"><i class="ri-twitter-x-fill"></i></a> 
+          <a href="href"><i class="ri-github-fill"></i></a>
+          <a href="href"><i class="ri-medium-fill"></i></a>
+          <a href="href"><i class="ri-instagram-line"></i></a>
+          <a href="href"><i class="ri-linkedin-box-fill"></i></a>
+        </div>
+       </social>
+       <div class="footertray">
+        <div>
+        Except as otherwise noted, this work is licensed under a   Creative Commons
+        Attribution 4.0 International License, and code samples are licensed under
+        the BSD License.
+        </div>
+        <div>
+          <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+            <li>Security</li>
+          </ul>
+        </div>
+       </div>
+    </footer>
 </body>
 </html>
