--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer-light">
+    <footer>
        <div class="contentfooter">
          <div class="logo">
           <a href="href">
@@ -181,13 +181,14 @@
           <a href="href"><i class="ri-linkedin-box-fill"></i></a>
         </div>
        </social>
+       <div class="line"></div>
        <div class="footertray">
-        <div>
+        <div class="except">
         Except as otherwise noted, this work is licensed under a   Creative Commons
         Attribution 4.0 International License, and code samples are licensed under
         the BSD License.
         </div>
-        <div>
+        <div class="terms">
           <ul>
             <li>Terms</li>
             <li>Privacy</li>
